[package]
name = "transity"
version = "0.8.0"
edition = "2021"
description = "The plain text accounting tool of the future"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ad-si/Transity"
homepage = "https://github.com/ad-si/Transity"
keywords = ["accounting", "finance", "ledger", "plain-text", "cli"]
categories = ["command-line-utilities", "finance"]
exclude = [
  "docs_src/",
  "examples/",
  "images/",
  "purescript/",
  "recordings/",
  "scripts/",
  "webapp/",
  ".github/",
  ".gitpod.yml",
  ".pursfmt.yaml",
  "flake.lock",
  "flake.nix",
  "eslint.config.js",
  "bun.lock",
  "package.json",
  "oclis.ncl",
  "spago.lock",
  "spago.yaml",
  "ledger2transity.sh",
]

[lib]
name = "transity"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "transity"
path = "src/main.rs"

[features]
default = ["cli"]
cli = [
  "dep:clap",
  "dep:rust_xlsxwriter",
]
wasm = [
  "dep:wasm-bindgen",
  "dep:console_error_panic_hook",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
num-rational = { version = "0.4", features = ["serde"] }
num-bigint = "0.4"
num-traits = "0.2"
colored = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"], optional = true }
rust_xlsxwriter = { version = "0.80", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
regex = "1"
