name:                transity
version:             0.1.0.0
synopsis:            Keep track of your ðŸ’µ, ðŸ•˜, ðŸ–, ðŸ„, ðŸ» or anything else.
description:         The plain text accounting tool of the future.
homepage:            https://github.com/adius/transity
license:             UNLICENSED
author:              Adrian Sieber
maintainer:          mail@adriansieber.com
copyright:           2017 Adrian Sieber
category:            Finance
build-type:          Simple
extra-source-files:  readme.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable transity-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transity
  default-language:    Haskell2010

test-suite transity-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , transity
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/transity
