[package]
name = "transity"
version = "0.8.0"
edition = "2021"

[[bin]]
name = "transity"
path = "src/main.rs"

[lib]
name = "transity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
num-rational = { version = "0.4", features = ["serde"] }
num-bigint = "0.4"
num-traits = "0.2"
anyhow = "1"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
